--- a/src/components/TotalDonors.css
+++ b/src/components/TotalDonors.css
@@ -1,5 +1,5 @@
 .total-donors-section {
-    background-image: url('../../public/heart.jpeg');
+    background-image: url('/heart.jpeg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
